    done to ensure that `Locals` are captured when the task is scheduled and
    then used when the task is run. Existing `Timer` implementations should rename
    their existing `schedule` methods to work with the new interface. ``RB_ID=755387``

  * util-core: Remove deprecated `FuturePool.defaultPool`, callers should
    use `FuturePool.unboundedPool` instead. ``RB_ID=757499``

6.29.0  2015-10-15

New Features:

  * util-core: Introduce an optional max capacity to `AsyncQueue`.
    Modified `AsyncQueue.offer` to return a boolean indicating whether or not the
    item was accepted. Added `AsyncQueue.drain(): Try[Queue]`. ``RB_ID=745567`

API Changes:

  * util-core: Remove deprecated methods from `com.twitter.util.Time` and
    `com.twitter.util.Duration`. ``RB_ID=751771``

  * util-core: Provide methods on `Stopwatch` so that users can take advantage of
    `Time` manipulation tools in latency-sensitive code when measuring elapsed
    time. ``RB_ID=75268``

Changes in Runtime Behavior:

  * util-core: The Scheduler clock stats were decommissioned as they only make sense
    relative to `wallTime` and the tracking error we have experienced `wallTime` and
    `*Time` make it impossible to use them reliably. It is not worth the performance
    and code complexity to support them. ``RB_ID=750239``

  * util-core: `JavaTimer` and `ScheduledThreadPoolTimer` now capture the `Local`
    state when scheduled and is used along with that `Monitor` when the `TimerTask`
    is run. ``RB_ID=755387``

  * util-logging: `QueueingHandler` does not create a separate thread per instance.
    ``RB_ID=745567`

6.28.0  2015-09-25

API Changes:

  * util-core: Remove deprecated methods from `com.twitter.util.Var`.

    To migrate `observe` and `foreach`, given `aVar.observe { t => somethingWith(t) }`
    you would write `aVar.changes.register(Witness({ t => somethingWith(t) }))`.

    To migrate `observeUntil`, given `aVar.observeUntil(_ == something)`,